--- a/static/css/main.css
+++ b/static/css/main.css
@@ -378,9 +378,12 @@ footer {
 }
 
 .project-content.description {
-  display: inline-block;
+  display: -webkit-box;
   height: 100px;
+  text-overflow: ellipsis;
   overflow: hidden;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
 }
 
 .tag-filter {
