--- a/css/main.css
+++ b/css/main.css
@@ -745,6 +745,51 @@ ul.triggers li:hover {
 }
 
 
+.form-sorting{
+  font-family: 'IBM Helvetica', Helvetica Neue, HelveticaNeue, Helvetica, sans-serif;
+  font-size: 14px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 1rem 5rem 1rem 1rem;
+  color: #152934;
+  background-color: rgb(235, 240, 247);
+  border: none;
+  border-radius: 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  /* font-weight: 600; */
+  margin-right: 2rem;
+  background-image: linear-gradient(45deg, transparent 50%, #152934 50%), linear-gradient(135deg, #152934 50%, transparent 50%), linear-gradient(to right, #ebf0f7, #ebf0f7);
+  background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), 100% 0;
+  background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
+  background-repeat: no-repeat;
+
+}
+.bx--select{
+  padding: 15px 0px;
+  position: relative;
+  display: block;
+}
+
+.bx--global-light-ui .bx--select__arrow {
+  fill: #3d70b2;
+}
+.bx--select__arrow {
+  fill: #5aaafa;
+  position: absolute;
+  right: 3.35rem;
+  top: 2.4rem;
+  width: .75rem;
+  height: 1.5rem;
+  pointer-events: none;
+}
+
+.filterAreaDiv{
+  display: flex;
+}
+
 
 
 @media (min-width: 600px) {
@@ -762,15 +807,6 @@ ul.triggers li:hover {
   }
 }
 
-@media (min-width: 1125px) {
-
-  .project-item {
-    width: 22%;
-    margin-left: 1.5%;
-    margin-right: 1.5%;
-  }
-}
-
 
 @media (min-width: 825px) {
   .header-image {
@@ -785,6 +821,11 @@ ul.triggers li:hover {
 @media (min-width: 1250px) {
   .header-image {
     width: 50%;
+  }
+  .project-item {
+    width: 22%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
   }
 }
 
@@ -844,6 +885,35 @@ ul.triggers li:hover {
   }
   .ser.col-md-2.col-sm-4.col-xs-12.filter {
     width: 30%;
+  }
+  .filter-row{
+    display: block;
+    padding: 0px;
+  }
+  .fil{
+        margin-right: 0rem;
+  }
+  .ser.filter{
+    width: 32%;
+    float: right;
+    margin-left: 3%;
+  }
+  .form-sorting{
+    width: 100%;
+  }
+  .bx--select {
+    padding: 15px 0px;
+    position: relative;
+    display: block;
+    width: 65%;
+  }
+  .filterAreaDiv {
+    display: flex;
+    width: 100%;
+  }
+  .TotHome{
+        padding: 1rem 1rem 2rem 1rem;
+        text-align: center;
   }
 
 }
