--- a/css/main.css
+++ b/css/main.css
@@ -317,13 +317,13 @@ footer {
   border-bottom: none;
   border-radius: 10px;
   font-weight: normal;
-  background: #aaf9e6;
-  color: #238070;
+  background: #eed3fe;
+  color: #7c4f9e;
 }
 
 .language.search-body button.tagFilter.btn.btn-sm.active {
-  background: #238070;
-  color: #aaf9e6;
+  background: #7c4f9e;
+  color: #eed3fe;
   padding-right: 15px;
 }
 
@@ -333,11 +333,24 @@ footer {
       bottom: 0;
       content: "\274c";
       font-size: 16px;
-      color: #aaf9e6;
+      color: #eed3fe;
       line-height: 100px;
       text-align: center;
       padding-left: 2px;
       content: '\d7';
+}
+
+.category.search-body button.tagFilter.btn.btn-sm.active:after{
+    position: absolute;
+    top: 3px;
+    bottom: 0;
+    content: "\274c";
+    font-size: 16px;
+    color: #aaf9e6;
+    line-height: 100px;
+    text-align: center;
+    padding-left: 2px;
+    content: '\d7';
 }
 
 span.tag-filter.category.ng-binding.active {
@@ -352,13 +365,14 @@ span.tag-filter.category.ng-binding.active {
   border-bottom: none;
   border-radius: 10px;
   font-weight: normal;
-  background: #eed3fe;
-  color: #7c4f9e;
+  background: #aaf9e6;
+  color: #238070;
 }
 
 .category.search-body button.tagFilter.btn.btn-sm.active{
-  background: #7c4f9e;
-  color: #eed3fe;
+  background: #238070;
+  color: #aaf9e6;
+  padding-right: 15px;
 }
 
 .project-content{
@@ -389,10 +403,18 @@ span.tag-filter.category.ng-binding.active {
   border-radius: 10px;
   padding: 2px 10px;
 }
+span.tag-filter.language.ng-binding.myLanguage {
+    background: #7c4f9e;
+    color: #eed3fe;
+}
 
 .tag-filter.category {
   background: #aaf9e6;
   color: #238070;
+}
+span.tag-filter.category.ng-binding.myCategory {
+    background: #238070;
+    color: #aaf9e6;
 }
 
 .services {
