--- a/css/main.css
+++ b/css/main.css
@@ -751,10 +751,9 @@ ul.list-separator.nav.navbar-nav.well.well-primary.default {
 
 
 .header-panel.shadow-z-2-banner h1{
-  font-weight: lighter;
-  font-weight: 200;
-  color: white;
-
+    font-weight: normal;
+    color: white;
+    font-size: 32px;
 }
 
 a#fliterButtonID:hover{
