--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ body {
   font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Noto Sans", Noto, sans-serif;
 }
 
+svg {
+  vertical-align: middle;
+}
+
 .header-container {
   padding: 0 2rem;
 }
