Fixed filter padding - closes #106

--- a/css/main.css
+++ b/css/main.css
@@ -876,7 +876,7 @@ ul.triggers li:hover {
 
 @media (min-width: 875px) {
   .language {
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
   }
 
   .dropdown {
