--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ svg {
 }
 
 .header-container {
-  padding: 0 2rem;
+  padding: 0 4rem;
 }
 
 .header-panel.shadow-z-2 {
@@ -115,7 +115,7 @@ p.info a {
   font-size: 24px;
   color: white;
   display: inline-block;
-  margin-right: 24px;
+  margin-left: 24px;
 }
 
 .icon:hover #bluemix-logo-copy-6 {
@@ -133,7 +133,7 @@ body .container .jumbotron-primary, body .container .well-primary, body .contain
 .page-container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 4rem;
 }
 
 .menu ul li {
@@ -837,6 +837,49 @@ ul.triggers li:hover {
 .filterAreaDiv{
   display: flex;
 }
+
+
+
+
+a.survey {
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+  text-decoration: none;
+}
+a.survey .floating-feedback {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 30px;
+  height: 70px;
+  /* background: #5596e6; */
+  /* padding: 5px 2px; */
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  left: 5px;
+}
+a.survey .floating-feedback .feedback-icon {
+  display: block;
+}
+.feedback-icon {
+  height: 100%;
+}
+
+a.survey .floating-feedback .feedback-tooltip {
+  background: #323232;
+  color: white;
+  padding: 0;
+  position: absolute;
+  padding: .3em .4em .5em;
+  top: -45px;
+  left: 10px;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  opacity: 0;
+}
+
 
 
 
