--- a/app/views/home.html
+++ b/app/views/home.html
@@ -21,7 +21,7 @@
                     </select>
                 </div>
 
-                <div class="ser filter" ng-click="clickToExpand=true">
+                <div class="ser filter" ng-click="clickToView = !clickToView">
                     <form role="search">
                         <div class="filterButton" id="filterButton">
                             <span> Filter </span>
@@ -41,7 +41,7 @@
 </div>
 
 <div class="page-container">
-    <div class="dropdown" id="filterDropdown" ng-show="clickToExpand" >
+    <div class="dropdown content-area sample-show-hide" id="filterDropdown" ng-show="clickToView" >
         <div class="inside filter-category">
             <span class="filter-text">LANGUAGES:</span><br/>
             <div class="language search-body">
