Adding the following functionalities, Submit New Sample, Animation and more

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,3 +1,14 @@
+<!-- Header label area -->
+<div class="header-panel shadow-z-2-banner">
+    <img class="header-image" src="./img/banner-background.svg">
+    <div class="page-container">
+        <h1>Featured Samples</h1>
+
+    </div>
+
+</div>
+
+
 <!-- Filter Area-->
 <div class="header-panel shadow-z-2-filter">
     <div class="page-container">
@@ -175,18 +186,7 @@
         </li>
     </ul>
 
+    <a class="featureSampleMobile" data-track-action="FeatureSample" data-track-label="Feature a sample" href="https://github.com/IBM-Bluemix" analytics-on="click" analytics-event="Feature a sample">Request to feature new Sample</a>
 
-    <div class="row">
-        <div class="col-md-12 col-xs-12 footer">
-            <footer>
 
-                Made with <i class="fa fa-heart" aria-hidden="true"></i> by the Bluemix team</br>
-                Copyright © IBM 2017 | <a target="_blank" href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen" analytics-on="click" analytics-event="Footer To: Privacy">Privacy</a>
-                <br>Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site">IBM Bluemix</a>
-                <br>
-            </footer>
-
-        </div>
-    </div>
-    <br>
 </div>
