--- a/css/main.css
+++ b/css/main.css
@@ -842,28 +842,146 @@ ul.triggers li:hover {
   display: flex;
 }
 
+a.featureSample {
+  color: #eed3fe;
+  font-size: 15px;
+}
 
+a.featureSampleMobile{
+  display: none;
+}
+.containerContact{
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+  margin-top: 60px;
+}
+.contantIn{
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 1px;
+  margin: 0px 0px 1.5em;
+  padding: 1.5em 0.75em;
+  border-top: 5px #5596e6 solid;
+}
 
+.RequestForm input[type="text"], .RequestForm input[type="email"], textarea{
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.0588235) 0px 1px 3px inset;
+  box-sizing: border-box;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-size: 1em;
+  margin-bottom: 0.75em;
+  width: 100%;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(222, 222, 222);
+  border-image: initial;
+  border-radius: 3px;
+  padding: 0.5em;
+  transition: border-color 0.2s ease;
+}
 
+.RequestForm input[type="text"], .RequestForm input[type="email"]{
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: 16px 18px;
+  background-position: 98% 50%;
+  cursor: auto;
+  margin-bottom: 15px;
+  border-radius: 0px;
+  background: #ebf0f7;
+}
 
+.RequestForm textarea{
+  height: 220px;
+  border-radius: 0px;
+  background: #ebf0f7;
+}
+.subm {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  /* border-radius: 4px; */
+  background: #5596e6;
+  color: white;
+}
+.rowFooter{
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 4rem;
+}
+.contactBack a{
+  display: inline-block;
+  padding: 6px 14px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  /* border-radius: 4px; */
+  background: #5596e6;
+  color: white;
+  margin-bottom: 10px;
+}
+.contactBack a:hover{
+  text-decoration: none;
+}
+.contact-title a:hover{
+    text-decoration: none;
+    border: none;
+}
 
 @media (min-width: 600px) {
   .project-item {
     width: 49%;
     margin-right: 2%;
   }
+
 }
 
 @media (min-width: 600px) and (max-width: 970px) {
   .project-item:nth-child(2n+2) {
     margin-right: 0;
   }
+
+
 }
 
 @media (min-width: 970px) {
   .project-item {
     width: 31.33%;
     margin-right: 3%;
+  }
+  .project-item {
+    height: 426px;
   }
 }
 
@@ -883,10 +1001,6 @@ ul.triggers li:hover {
   .header-image {
     width: 60%;
   }
-
-  .project-item {
-    height: 426px;
-  }
 }
 @media (min-width: 1250px) {
   .header-image {
@@ -898,7 +1012,9 @@ ul.triggers li:hover {
     margin-left: 1.5%;
     margin-right: 1.5%;
     height: 426px;
+
   }
+
 
   .project-item:nth-child(4n+1) {
     margin-left: 0;
@@ -918,6 +1034,16 @@ ul.triggers li:hover {
 }
 
 @media (max-width: 768px) {
+
+  a.featureSample{
+    display: none;
+  }
+  a.featureSampleMobile{
+    color: #7c4f9e;
+    font-size: 15px;
+    display: inline;
+  }
+
   .col-md-12.col-xs-12.footer {
     width: 100%;
   }
