--- a/css/main.css
+++ b/css/main.css
@@ -959,6 +959,15 @@ a.featureSampleMobile{
     border: none;
 }
 
+button.ng-isolate-scope{
+  color: #eed3fe;
+  font-size: 15px;
+  background: none;
+  border: none;
+
+}
+
+
 @media (min-width: 600px) {
   .project-item {
     width: 49%;
@@ -1035,14 +1044,17 @@ a.featureSampleMobile{
 
 @media (max-width: 768px) {
 
-  a.featureSample{
-    display: none;
+  button.ng-isolate-scope{
+    font-size: 14px;
+    padding-right: 0;
+    margin-bottom: 2px;
+    width: 100%;
+    float: right;
+    text-align: right;
   }
-  a.featureSampleMobile{
-    color: #7c4f9e;
-    font-size: 15px;
-    display: inline;
-  }
+
+
+
 
   .col-md-12.col-xs-12.footer {
     width: 100%;
