--- a/css/NPS-Style.css
+++ b/css/NPS-Style.css
@@ -81,7 +81,7 @@ a.survey .give-feedback {
 
 a.survey .floating-feedback {
     position: fixed;
-    top: 0;
+    top: -250px;
     bottom: 0;
     left: 15px;
     margin: auto;
