--- a/css/main.css
+++ b/css/main.css
@@ -1100,6 +1100,16 @@ button.ng-isolate-scope:hover{
 
 }
 @media (min-width: 321px) and (max-width: 780px){
+  a.survey .floating-feedback {
+    position: fixed;
+    top: 0px;
+    bottom: 0;
+    left: 15px;
+    margin: auto;
+    width: 21px;
+    height: 70px;
+  }
+  
   ul.list-separator.nav.navbar-nav.well.well-primary.default {
     width: auto;
   }
