--- a/app/views/home.html
+++ b/app/views/home.html
@@ -25,8 +25,12 @@
                 <div class='bx--select'>
                     <select id="sortBy" ng-model="tagP.sort" class="form-sorting">
                         <option value="" analytics-on="click" analytics-event="Sort by: All">Sort by: All</option>
-                        <option value="Most Viewed" analytics-on="click" analytics-event="Sort by: Most Viewed">Most Viewed</option>
-                        <option value="Recently Added" analytics-on="click" analytics-event="Sort by: Recently Added">Recently Added</option>
+                        <option value="Most Viewed" analytics-on="click" analytics-event="Sort by: Most Viewed">Most
+                            Viewed
+                        </option>
+                        <option value="Recently Added" analytics-on="click" analytics-event="Sort by: Recently Added">
+                            Recently Added
+                        </option>
                     </select>
                 </div>
 
@@ -50,10 +54,8 @@
 </div>
 
 
-
-
 <div class="page-container">
-    <div class="dropdown content-area sample-show-hide" id="filterDropdown" ng-show="clickToView" >
+    <div class="dropdown content-area sample-show-hide" id="filterDropdown" ng-show="clickToView">
         <div class="inside filter-category">
             <span class="filter-text">LANGUAGES:</span><br/>
             <div class="language search-body">
@@ -107,7 +109,8 @@
                             Watson
                         </button>
                         <button type="button" data-track-action="Filter" data-track-label="Serverless"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Serverless')">
+                                class="tagFilter btn btn-sm" data-toggle="button"
+                                ng-click="toggleCategory('Serverless')">
                             Serverless
                         </button>
                     </tr>
@@ -119,7 +122,6 @@
 </div>
 
 
-
 <div class="page-container main outer">
     <div class="TotHome">
         <span ng-if="samples.length === filteredLinks.length">Displaying <b>{{samples.length}}</b> featured samples.</span>
@@ -127,12 +129,15 @@
     </div>
 
     <ul class="items-wrapper"><!-- START FULL PAGE -->
-        <li class="inside project-item slide-animation" ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP ))">
+        <li class="inside project-item slide-animation"
+            ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP ))">
 
             <div class="project-outer" ng-class="{demo: sample.tags.indexOf('demo')>=0}">
                 <!-- tracking sample links -->
                 <div class="link-title">
-                    <a id="demoID" data-track-action="sample-title" data-track-label="{{sample.urlLink}}" href="{{sample.url}}" target="_blank" analytics-on="click" analytics-name="Visited Repo Content" analytics-referrer="Visited Repo Content" analytics-event="Sample Title: {{sample.name}}">{{sample.name}}</a>
+                    <a id="demoID" data-track-action="sample-title" data-track-label="{{sample.urlLink}}"
+                       href="{{sample.url}}" target="_blank" analytics-on="click" analytics-name="Visited Repo Content"
+                       analytics-referrer="Visited Repo Content" analytics-event="Sample Title: {{sample.name}}">{{sample.name}}</a>
                     <a href="{{sample.homepage}}" ng-if="sample.homepage"> <span class="e1a-sample e1a-sm"></span></a>
                 </div>
                 <div class="project-content description">
@@ -164,21 +169,80 @@
               </span>
                     </div>
                 </div>
-                <meta name="description" content="{{sample.search}}">
             </div>
-
+            <meta name="description" content="{{sample.search}}">
 
 
             <div class="tag-level">
+
+
                 <span ng-show="{{sample.blogPost !== ''}}" class="project-link">
-                    <a id="BlogPost" data-track-action="sample-blog" data-track-label="{{sample.blogPost}}" href="{{sample.blogPost}}" class="hrefLink" target="_blank" analytics-on="click" analytics-name="Viewed Blog Post" analytics-referrer="Viewed Blog Post" analytics-event="Blog Post: {{sample.name}}">Blog Post</a>
+                    <a id="BlogPost" data-track-action="sample-blog" data-track-label="{{sample.blogPost}}"
+                       href="{{sample.blogPost}}" class="hrefLink" target="_blank" analytics-on="click"
+                       analytics-name="Viewed Blog Post" analytics-referrer="Viewed Blog Post"
+                       analytics-event="Blog Post: {{sample.name}}">
+                        <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1"
+                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <title>blog</title>
+                            <desc>Created with Sketch.</desc>
+                            <defs></defs>
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g id="blog" fill-rule="nonzero" fill="#4178BE">
+                                    <g id="blog_24" transform="translate(2.000000, 2.000000)">
+                                        <g id="Layer_1">
+                                            <g id="Group">
+                                                <g id="Shape">
+                                                    <polygon
+                                                            points="14.5454545 7.27272727 12.7272727 7.27272727 13.6363636 4.54545455 11.8181818 4.54545455 10.9090909 7.27272727 10.9090909 10.9090909 14.5454545 10.9090909"></polygon>
+                                                    <polygon
+                                                            points="9.09090909 7.27272727 7.27272727 7.27272727 8.18181818 4.54545455 6.36363636 4.54545455 5.45454545 7.27272727 5.45454545 10.9090909 9.09090909 10.9090909"></polygon>
+                                                    <path d="M0,0 L0,15.3845455 L4.61545455,20 L20,20 L20,0 L0,0 Z M18.1818182,18.1818182 L5.45454545,18.1818182 L5.45454545,14.5454545 L1.81818182,14.5454545 L1.81818182,1.81818182 L18.1818182,1.81818182 L18.1818182,18.1818182 Z"></path>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
                 </span>
-                <span ng-show="{{sample.urlLink !== ''}}" class="project-link">
-                    <a id="LiveDemo" data-track-action="sample-demo" data-track-label="{{sample.urlLink}}" href="{{sample.urlLink}}" class="hrefLink" target="_blank" analytics-on="click" analytics-name="Viewed Live Demo" analytics-referrer="Viewed Live Demo" analytics-event="Live Demo: {{sample.name}}">Live Demo</a>
-                </span>
+
                 <span ng-show="{{sample.urlVideo !== ''}}" class="project-link">
-                    <a id="LiveVideo" data-track-action="sample-video" data-track-label="{{sample.urlVideo}}" href="{{sample.urlVideo}}" class="hrefLink" target="_blank" analytics-on="click" analytics-name="Viewed Video" analytics-referrer="Viewed Video" analytics-event="View Video: {{sample.name}}">View Video</a>
+                    <a id="LiveVideo" data-track-action="sample-video" data-track-label="{{sample.urlVideo}}"
+                       href="{{sample.urlVideo}}" class="hrefLink" target="_blank" analytics-on="click"
+                       analytics-name="Viewed Video" analytics-referrer="Viewed Video"
+                       analytics-event="View Video: {{sample.name}}">
+                        <svg width="27px" height="26px" viewBox="0 0 27 22" version="1.1"
+                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <!-- Generator: Sketch 42 (36781) - http://www.bohemiancoding.com/sketch -->
+                            <title>video</title>
+                            <desc>Created with Sketch.</desc>
+                            <defs></defs>
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g id="video" fill-rule="nonzero" fill="#4178BE">
+                                    <g id="video_32" transform="translate(1.000000, 1.000000)">
+                                        <g id="Layer_1">
+                                            <g id="Group">
+                                                <polygon id="Shape"
+                                                         points="9.16666667 7.5 9.16666667 15.8333333 17.5 11.6666667"></polygon>
+                                                <path d="M0,0 L0,3.33333333 L0,20 L25,20 L25,3.33333333 L25,0 L0,0 Z M23.3333333,18.3333333 L1.66666667,18.3333333 L1.66666667,5 L23.3333333,5 L23.3333333,18.3333333 Z"
+                                                      id="Shape"></path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
                 </span>
+
+                <span ng-show="{{sample.urlLink !== ''}}" class="project-link demo">
+                    <a id="LiveDemo" data-track-action="sample-demo" data-track-label="{{sample.urlLink}}"
+                       href="{{sample.urlLink}}" class="hrefLink" target="_blank" analytics-on="click"
+                       analytics-name="Viewed Live Demo" analytics-referrer="Viewed Live Demo"
+                       analytics-event="Live Demo: {{sample.name}}">Demo</a>
+                </span>
+
             </div>
 
         </li>
