--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
 <div class="header-panel shadow-z-2-banner">
     <img class="header-image" src="./img/banner-background.svg">
     <div class="page-container">
-        <h1><span class="hideItem">Bluemix Samples, Bluemix Tutorials, Bluemix GitHub Apps</span> Featured Samples</h1>
+        <h1><span class="hideItem">Bluemix Samples, Bluemix Tutorials, Bluemix GitHub Apps</span> Bluemix Featured Samples</h1>
     </div>
 </div>
 
