Adding new filter type

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -113,6 +113,12 @@
                                 ng-click="toggleCategory('Serverless')">
                             Serverless
                         </button>
+                        <button type="button" data-track-action="Filter" data-track-label="Kubernetes"
+                                class="tagFilter btn btn-sm" data-toggle="button"
+                                ng-click="toggleCategory('Kubernetes')">
+                            Kubernetes
+                        </button>
+                        
                     </tr>
                 </table>
             </div>
