--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,17 @@ h2.blog-title-pro:after {
 #AbountInfo div{
 
 }
-
+.tutorialsButton{
+  color: #ffffff;
+  font-size: 15px;
+  background: none;
+  border: none;
+  margin-right: 10px;
+}
+.tutorialsButton:hover{
+  color: #5596e6;
+  text-decoration: none;
+}
 
 footer {
   border-top: 1px solid #C5C0C0;
